<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="equals_sign">=</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="multiply_sign">×</string>
    <string name="divide_sign">÷</string>
    <string name="sqrt_sign">√</string>
    <string name="delete_all_sign">D</string>
    <string name="delete_one_sign"><![CDATA[<]]></string>
    <string name="seven_sign">7</string>
    <string name="eight_sign">8</string>
    <string name="nine_sign">9</string>
    <string name="four_sign">4</string>
    <string name="five_sign">5</string>
    <string name="six_sign">6</string>
    <string name="one_sign">1</string>
    <string name="two_sign">2</string>
    <string name="three_sign">3</string>
    <string name="delete_history_sign">R</string>
    <string name="zero_sign">0</string>
    <string name="dot_sign">.</string>
    <string name="invalid_expression">Invalid expression</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="history_text">History</string>
    <string name="bracket_left_sign">(</string>
    <string name="bracket_right_sign">)</string>
    <string name="exponent_sign">^</string>
    <string name="e_sign">e</string>
    <string name="to_decimal_sign">1/x</string>
    <string name="pi_sign">π</string>
    <string name="sin_sign">sin</string>
    <string name="cos_sign">cos</string>
    <string name="tan_sign">tan</string>
    <string name="log_sign">log</string>
</resources>