<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:clickable="true"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"/>

    <TextView
        android:id="@+id/calcArea"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="60dp"
        android:maxLines="1"
        android:gravity="right"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteAll"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/delete_all_sign"
        android:textSize="30sp"
        android:gravity="center"
        app:backgroundTint="#03A9F4"
        app:layout_constraintRight_toLeftOf="@id/guideline25"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
        android:onClick="deleteAll"/>

    <Button
        android:id="@+id/btnDeleteOne"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/delete_one_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintRight_toLeftOf="@id/guideline50"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
        android:onClick="deleteOne"/>

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/percent_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintRight_toLeftOf="@id/guideline75"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/divide_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline75"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/seven_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintRight_toLeftOf="@id/guideline25"
        app:layout_constraintTop_toBottomOf="@id/btnDeleteAll"
        android:onClick="writeSeven"/>

    <Button
        android:id="@+id/btnEight"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/eight_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintRight_toLeftOf="@id/guideline50"
        app:layout_constraintTop_toBottomOf="@id/btnDeleteOne"
        android:onClick="writeEight"/>

    <Button
        android:id="@+id/btnNine"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/nine_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintRight_toLeftOf="@id/guideline75"
        app:layout_constraintTop_toBottomOf="@id/btnPercent"
        android:onClick="writeNine"/>

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/multiply_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline75"
        app:layout_constraintTop_toBottomOf="@id/btnDivide" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/four_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintRight_toLeftOf="@id/guideline25"
        app:layout_constraintTop_toBottomOf="@id/btnSeven"
        android:onClick="writeFour"/>

    <Button
        android:id="@+id/btnFive"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/five_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline25"
        app:layout_constraintTop_toBottomOf="@id/btnEight"
        android:onClick="writeFive"/>

    <Button
        android:id="@+id/btnSix"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/six_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline50"
        app:layout_constraintTop_toBottomOf="@id/btnNine"
        android:onClick="writeSix"/>

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/minus_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline75"
        app:layout_constraintTop_toBottomOf="@id/btnMultiply" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/one_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintRight_toLeftOf="@id/guideline25"
        app:layout_constraintTop_toBottomOf="@id/btnFour"
        android:onClick="writeOne"/>

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/two_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline25"
        app:layout_constraintTop_toBottomOf="@id/btnFive"
        android:onClick="writeTwo"/>

    <Button
        android:id="@+id/btnThree"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/three_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline50"
        app:layout_constraintTop_toBottomOf="@id/btnSix"
        android:onClick="writeThree"/>

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/plus_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline75"
        app:layout_constraintTop_toBottomOf="@id/btnMinus" />

    <Button
        android:id="@+id/btnRotate"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/rotate_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintRight_toLeftOf="@id/guideline25"
        app:layout_constraintTop_toBottomOf="@id/btnOne" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/zero_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline25"
        app:layout_constraintTop_toBottomOf="@id/btnTwo"
        android:onClick="writeZero"/>

    <Button
        android:id="@+id/btnDot"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/dot_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline50"
        app:layout_constraintTop_toBottomOf="@id/btnThree" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/equals_sign"
        android:textSize="30sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintLeft_toRightOf="@id/guideline75"
        app:layout_constraintTop_toBottomOf="@id/btnPlus" />

</androidx.constraintlayout.widget.ConstraintLayout>